--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Spanish Main'
 - !lcsh 'Pirates'
 - !lcc 'F2155'
+- GITenberg
 title: The Monarchs of the Main; Or, Adventures of the Buccaneers. Volume 1 (of 3)
 url: http://www.gutenberg.org/ebooks/38631
